--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\jbarrett\\AppData\\Roaming\\NetBeans\\14\\build.properties
+user.properties.file=C:\\Users\\stu48426\\AppData\\Roaming\\NetBeans\\14\\build.properties
